# BuildInstallerScripts

./: .gitignore
MyBuildScript/: pyproject.toml
MyBuildScript/src/BuildScript_RyzeYang/: BuildHelper.py  EncryptDllHelper.py  FileVersionHelper.py  main.py
